# local-prompt-optimizer

./: .env.example  .gitignore  AGENT_HANDOFF_20260420.md  BACKLOG.md  LPO_SDP.md  README.md  STAGE_8_DESIGN.md  _build_trajectories.py  pyproject.toml  run_bakeoff.py  run_bakeoff_rubric.py  run_local_only.py
.windsurf/rules/: lpo-runs.md
lpo/: __init__.py
lpo/cli/: main.py
lpo/config/: __init__.py  defaults.yaml  schema.py
lpo/core/: __init__.py  authoring.py  comparison.py  cost.py  engine.py  history.py  iteration.py  multi_engine.py  mutator.py  target_factory.py  task.py
lpo/models/: __init__.py  anthropic_client.py  base.py  gold_source.py  lmstudio.py  openrouter.py  openrouter_pricing.py  registry.py  stub.py
lpo/overseer/: __init__.py  agent.py  context.py  prompt_writer.py
lpo/postmortem/: __init__.py  analyst.py  artifacts.py  gate.py  patches.py  retry.py  runner.py  schemas.py
lpo/scoring/: __init__.py  aggregation.py  base.py  (+4 more)
scripts/: rescore_iteration.py  simulate_greeting_txt.py
tests/: conftest.py  test_anthropic_client_auth.py  test_anthropic_client_timeout.py  test_authoring.py  test_conversational_scorer.py  test_engine.py  test_field_diff.py  test_gold_source.py  test_lmstudio.py  test_mcp_postmortem.py  test_mcp_server.py  test_multi_engine.py  test_openrouter.py  test_overseer.py  test_postmortem_analyst.py  test_postmortem_artifacts.py  test_postmortem_gate.py  test_postmortem_patches.py  test_postmortem_retry.py  test_postmortem_runner.py  test_postmortem_schemas.py  test_rubric_scorer.py  test_scoring.py  test_server_api.py
(+67 files in other folders)
