[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lpo"
version = "0.1.0"
description = "Local Prompt Optimizer — autonomous prompt engineering for local models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LPO" }]
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "websockets>=13.0",
    "typer>=0.12.5",
    "rich>=13.8.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
lpo = "lpo.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["lpo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
